cabal-version:       >=1.10

name:                haskell-gfx
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Samuel Evans-Powell
maintainer:          mail@sevanspowell.net
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable haskell-gfx
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base
                     , gl
                     , GLFW-b
  -- hs-source-dirs:
  default-language:    Haskell2010

-- library
--   exposed-modules:     
--   -- other-modules:
--   -- other-extensions:
--   ghc-options:
--   build-depends:       base
--                      , gl
--   hs-source-dirs:      src/lib
--   default-language:    Haskell2010